block state mapping